middleware/zabbix/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web-nginx-mysql
  labels:
    app: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix
  template:
    metadata:
      labels:
        app: zabbix
    spec:
      containers:
      - name: web
        image: zabbix/zabbix-web-nginx-mysql:5.4-ubuntu-latest
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
