middleware/zabbix/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-nginx-mysql
  labels:
    app: zabbix
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 8443
  - name: http
    port: 8080
  selector:
    app: zabbix
